Used CI logging feedback to fix issues

--- a/src/components/singleplayer/singleplayer.css
+++ b/src/components/singleplayer/singleplayer.css
@@ -7,5 +7,12 @@ body {
 }
 
 .white-border {
-    border-color: white;
+    border-color: aliceblue;
+}
+
+.square {
+    padding: 0%;
+    width: 2%;
+    height: 2%;
+    border-color: aliceblue;
 }
