--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,7 @@ input {
     background-color: black;
     color: white;
     border: 5%;
+    width: 30%;
+    margin-left: 10%;
+    margin-right: auto;
 }
